<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeScreenActivity"
    android:background="@color/bgColour">

<!--    <androidx.appcompat.widget.AppCompatButton-->
<!--        android:id="@+id/signOutButton"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:layout_marginEnd="30dp"-->
<!--        android:backgroundTint="@android:color/holo_blue_light"-->
<!--        android:padding="15dp"-->
<!--        android:text="@string/sign_out"-->
<!--        android:textColor="@color/white"-->
<!--        android:textScaleX="1.1"-->
<!--        android:textSize="14sp"-->
<!--        android:textStyle="bold"-->
<!--        android:onClick="signOut"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/crossSymbolText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected"
        android:padding="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="-10dp"
        android:background="@android:color/holo_blue_light"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/crossBorderButton"
        app:layout_constraintBottom_toTopOf="@id/crossBorderButton" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/circleSymbolText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected"
        android:padding="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="-10dp"
        android:background="@android:color/holo_blue_light"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/circleBorderButton"
        app:layout_constraintBottom_toTopOf="@id/circleBorderButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/crossBorderButton"
        android:backgroundTint="@android:color/holo_blue_light"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="235dp"
        android:onClick="selectCrossUI"
        app:layout_constraintStart_toStartOf="@id/singlePlayerButton"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/circleBorderButton"
        android:backgroundTint="@android:color/holo_blue_light"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="235dp"
        android:onClick="selectCrossUI"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/singlePlayerButton"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:text="@string/x"
        android:id="@+id/crossButton"
        android:textColor="@color/white"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="240dp"
        android:layout_marginStart="5dp"
        android:textSize="30sp"
        android:onClick="selectCrossUI"
        app:layout_constraintStart_toStartOf="@id/singlePlayerButton"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:text="@string/o"
        android:id="@+id/circleButton"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="5dp"
        android:onClick="selectCircleUI"
        app:layout_constraintEnd_toEndOf="@id/singlePlayerButton"
        app:layout_constraintTop_toTopOf="parent" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/singlePlayerButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="selectSinglePlayerMode"
        android:paddingVertical="15dp"
        android:text="@string/single_player"
        android:textColor="@color/white"
        android:textScaleX="1.1"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:text="@string/multi_player"
        android:id="@+id/multiPlayerPlayerButton"
        android:backgroundTint="@android:color/holo_blue_light"
        android:layout_width="300dp"
        android:paddingVertical="15dp"
        android:textSize="14sp"
        android:textScaleX="1.1"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:onClick="selectMultiplePlayerMode"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>